--- a/screen_3.css
+++ b/screen_3.css
@@ -1,13 +1,286 @@
-/* Body Section */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap');
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    font-family:'Poppins',sans-serif;
+    font-size: x-large;
+}
+.heading
+{
+    height:100vh;
+    width:100%;
+    display:flex;
+    align-items: center;
+    background-color: #2d3436;
+    background: linear-gradient(315deg, #171a1b 0%, #000000 100%);
+
+}
+.heading::before,
+.heading::after
+{
+    content: '';
+    position: absolute;
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    opacity:0.4;
+}
+.heading::before
+{
+    clip-path: circle(30% at left 20%);
+    background: linear-gradient(315deg, #474848  10%, #424040 100%);
+
+}
+.heading::after
+{
+    clip-path: circle(25% at right 80%);
+    background-color: #2d3436;
+    background: linear-gradient(315deg, #0e0e0f 10%, #000000 100%);
+}
+header
+{
+    height:85vh;
+    width:90%;
+    background:rgba(30, 30, 29, 0.1);
+    backdrop-filter: blur(4px);
+    margin:auto;
+    border-radius:20px;
+    box-shadow: 1px 15px 20px rgba(175, 163, 163, 0.5);
+    border-top: 1px solid rgba(223, 210, 210, 0.1);
+    border-left: 1px solid rgba(255,255,255,0.1);
+    position:relative;
+    z-index: 12;
+}
+header .navbar
+{
+    width:100%;
+    display:flex;
+    padding:40px 60px;
+    justify-content: space-between;
+
+
+}
+header .navbar .logo a
+{
+    font-size:25px;
+    font-weight:500;
+    color:rgb(211, 211, 189);
+    text-decoration: none;
+}
+header .navbar .menu
+{
+    display:flex;
+}
+.navbar .menu li
+{
+   list-style: none;
+   margin: 0 10px;
+}
+.navbar .menu a
+{
+   text-decoration: none;
+   color:rgb(199, 194, 42);
+   font-size:20px;
+   font-weight:500;
+   transition: all 0.5 ease;
+
+}
+.navbar .menu a:hover
+{
+    color:rgb(199, 199, 216);
+}
+.navbar .buttonss a
+{
+    color:rgb(12, 12, 10);
+    outline:none;
+    text-decoration: none;
+    font-size:20px;
+    font-weight:500;
+    padding:6px 12px;
+    margin:0 8px;
+    border-radius:12px;
+    border:none;
+    cursor:pointer;
+    transition:all 0.3s ease;
+    background: linear-gradient(315deg, #e9ecd7 0%, #a2abac 74%);
+}
+.navbar .buttonss a:hover
+{
+   transform:scale(0.97);
+}
+.text-content
+{
+    width:40%;
+    margin: 70px 0 0 60px;
+}
+.text-content h2
+{
+    font-size:27px;
+    font-weight: 600;
+    color: #e9ecd7;
+}
+.text-content p
+{
+    margin-top: 15px;
+    font-size: 18px;
+    color:rgb(144, 95, 230);
+}
+.arrow
+{
+    position:absolute;
+    right:50px;
+    bottom:40px;
+}
+.arrow .Subscribe 
+{
+    font-size:20px;
+    font-weight:500px;
+    background-color: #fc5296;
+    background-image: linear-gradient(315deg, #fc5296 0%, #f67062 74%); 
+    padding:10px;
+    border-radius: 30px;
+
+
+}
+.arrow i
+{
+    height:45px;
+    width:40px;
+    line-height:2px;
+    text-align:center;
+    border-radius:3px;
+}
+@media (max-width:850px){
+    header .navbar{
+        flex-direction:column;
+        align-items:center;
+    }
+    .navbar .menu{
+        margin: 10px 0 20px 0;
+    }
+    .text-content{
+        width:70%;
+        margin:30px 0 0 20px; 
+    }
+    .arrow .Subscribe {
+        width:70%;
+        position: initial;
+        visibility: hidden;
+    }
+}
+@media (max-width:410px){
+    header{
+        height:100vh;
+        width:100%;
+        border-radius:0;
+    }
+
+}
+#p1div{
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+    text-align: center;
+    color: white;
+}
+
+
+
+
+
+* {
+    box-sizing: border-box;
+  }
+  
+  body {
+    background-color:black;
+    padding: 20px;
+    font-family: Arial;
+  }
+  
+  /* Center website */
+  .main {
+    max-width: 1000px;
+    margin: auto;
+  }
+  
+  h1 {
+    font-size: 50px;
+    word-break: break-all;
+  }
+  
+  .row {
+    margin: 8px -16px;
+  }
+  
+  /* Add padding BETWEEN each column (if you want) */
+  .row,
+  .row > .column {
+    padding: 8px;
+  }
+  
+  /* Create three equal columns that floats next to each other */
+  .column {
+    float: left;
+    width: 33.33%;
+    display: none; /* Hide columns by default */
+  }
+  
+  /* Clear floats after rows */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Content */
+  .content {
+    background-color: white;
+    padding: 10px;
+  }
+  
+  /* The "show" class is added to the filtered elements */
+  .show {
+    display: block;
+  }
+  
+  /* Style the buttons */
+  .btn {
+    border: none;
+    outline: none;
+    padding: 12px 16px;
+    background-color: white;
+    cursor: pointer;
+  }
+  
+  /* Add a grey background color on mouse-over */
+  .btn:hover {
+    background-color: #ddd;
+  }
+  
+  /* Add a dark background color to the active button */
+  .btn.active {
+    background-color: #666;
+     color: white;
+  }
+.footerh2{
+     color:black;
+ }
+
+
 hr{
+    color: black;
     margin-left: auto;
     margin-right: auto;
     width:70%;
     text-align:center;
 }
-body{
-    background:black;
-    
+#footer{
+    background:white;
+    font-family: sans-serif;
+    /* background-attachment: fixed; */
 }
 
 
@@ -21,9 +294,7 @@ h2{
 
 /* Comments Section */
 .comments {
-    margin: auto;
-    width: 50%;
-    padding: 10px;
+    padding: 2px;
     text-align: center;
 }
 #user_feedback{
@@ -31,21 +302,24 @@ h2{
     border-color: tomato;
     border-style: double;
     border-width: 2px;
+    align-items: center;
+    color: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 
 
 /* Rate Us Section */
-.rate {
+#rate {
     float: left;
     height: 46px;
     padding: 0 10px;
 }
-.rate:not(:checked) > input {
+#rate:not(:checked) > input {
     position:absolute;
     top:-9999px;
 }
-.rate:not(:checked) > label {
+#rate:not(:checked) > label {
     float:right;
     width:1em;
     overflow:hidden;
@@ -54,28 +328,29 @@ h2{
     font-size:50px;
     color:#ccc;
 }
-.rate:not(:checked) > label:before {
+#rate:not(:checked) > label:before {
    content: '★ ';
 }
-.rate > input:checked ~ label {
+#rate > input:checked ~ label {
     color: #ffc700;    
 }
-.rate:not(:checked) > label:hover,
-.rate:not(:checked) > label:hover ~ label {
+#rate:not(:checked) > label:hover,
+#rate:not(:checked) > label:hover ~ label {
    color: #deb217;  
 }
-.rate > input:checked + label:hover,
-.rate > input:checked + label:hover ~ label,
-.rate > input:checked ~ label:hover,
-.rate > input:checked ~ label:hover ~ label,
-.rate > label:hover ~ input:checked ~ label {
+#rate > input:checked + label:hover,
+#rate > input:checked + label:hover ~ label,
+#rate > input:checked ~ label:hover,
+#rate > input:checked ~ label:hover ~ label,
+#rate > label:hover ~ input:checked ~ label {
     color: #c59b08;
 }
-.rate{
-    margin: auto;
-    width: 59.25%;
+#rate{
+    /* margin: auto; */
+    width: 59%;
     padding: 5px;
-    text-align: center;
+    align-items: center;
+    /* position: relative; */
 }
 
 
@@ -87,32 +362,41 @@ h2{
     font-size: 15px;
     line-height: 20px;
     border: 0;
-    /* border-radius: 10px; */
+    border-radius: 20px;
     background-color: rgb(238, 238, 82);
 }
-.button{
+#button{
     margin: auto;
     width: 50%;
     padding: 10px;
     text-align: center;
+    
 }
+#submitbutton:hover{
+    transform:scale(1.25);
+    border-radius: 20px;
+    color:crimson;
+} 
 
 
 
 /* Ping Us Section */
 .fa{
-    margin: 10px;
+    margin: 30px;
     padding: 4px;
-    font-size: 6px;
-    width: 60px;
-    line-height: 100px;
+    font-size: 4px;
+    width: 35px;
+    /* line-height: 100px; */
     text-align: center;
     text-decoration: none;
-    border-radius: 15px;
+    border-radius: 55%;
     align-items: center;
+    transform: scale(2);
 }
 .fa:hover{
-    opacity: 0.7;
+    /* opacity: 0.7; */
+    transform: scale(3);
+    transition: 0.2s;
 }
 .fa-facebook{
     background: rgb(2,90,191);
@@ -132,8 +416,9 @@ h2{
     color: white;
 }
 .fa-instagram{
-    background: rgb(236, 11, 105);
-    color: white;
+    /* background: rgb(236, 11, 105); */
+    background: radial-gradient(circle at 10% 90%, rgb(230, 235, 54) 10%,rgb(221, 42, 123) 90%);
+    color: white
 }
 .fa-youtube-play{
     background: rgb(226, 15, 0);
@@ -145,8 +430,57 @@ h2{
     padding: 10px;
     text-align: center;
 }
+#copyright{
+    color:red;
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+}
+@import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
 
 
+.box{
+   width: 320px;
+   margin: 100px auto;
+   background-color: #000000;
+   background-image: linear-gradient(315deg, #000000 0%, #414141 74%);
+   border-radius: 7px;
+   box-shadow: 1px 2px 4px rgba(0,0,0,.3);
+}
+
+.box .headings{
+   background: #7800CF;
+   border-radius: 7px 7px 0px 0px;
+   padding: 10px;
+   color: #fff;
+   text-align: center;
+   font-family: "Rubik";
+}
+
+.faqs{
+   padding: 0px 20px 20px;
+   width: fit-content;
+}
+
+::-webkit-details-marker{
+   float: right;
+   margin-top: 3px;
+}
+
+details{
+    background-color: #89d4cf;
+    background-image: linear-gradient(315deg, #89d4cf 0%, #6e45e1 74%);
+    padding: 10px 20px;
+   border-radius: 7px;
+   margin-top: 20px;
+   font-family: "Rubik";
+   font-size: 14px;
+   letter-spacing: 1px;
+   cursor: pointer;
+}
+
+details summary{
+   outline: none;
+}
 
 
 
